	PR 6575 	* hash.c: Expand PTR to void *. 	(hash_delete): Add "freeme" parameter.  Call obstack_free. 	* hash.h: Expand PTR to void *. 	(hash_delete): Update prototype. 	* macro.c (macro_expand_body): hash_delete LOCALs from formal_hash. 	* config/tc-tic54x.c (tic54x_remove_local_label): Update hash_delete 	call. 	(subsym_substitute): Likewise. 	* doc/internals.texi (hash_delete): Update.